--- a/A2_1718146/.classpath
+++ b/A2_1718146/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="E:/1st Year of Uni/Introduction to Programming/FinchEclipse/lib/finch.jar"/>
+	<classpathentry kind="lib" path="//acfs4/cs17/cs17pml/Downloads/finch.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
